# simple-http-server

./: CMakeLists.txt  README.md  main.c
v2/: CMakeLists.txt  server.c  worker.c
v2/lib/: libuv.so.1.0.0
